refined function (pi, dots, etc) and now error output does not work

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -39,8 +39,8 @@
       </tr>
       <tr>
         <th><button id="0" class="number">0</button></th>
-        <th><button id="Math.PI" class="number">π</button></th>
-        <th><button id=".">∙</button></th>
+        <th><button id="pi">π</button></th>
+        <th><button id="dot">∙</button></th>
         <th><button id="equals">=</button></th>
       </tr>
     </table>
