created calculator brain, lost server input/output function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,6 +45,8 @@
       </tr>
     </table>
     <div id="errorMessage"></div>
-    <div id="history"></div>
+    <br>
+    <ul id="history"></ul>
+    <button id="clearHistory">Clear History</button>
   </body>
 </html>
