disallowed keyboard input how rude

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>The Calculator</h1>
     <table>
-      <input id="display" placeholder="55378008">
+      <input id="display" onkeydown="return false" placeholder="55378008">
       <tr>
         <td><button id="AC">A/C</button></td>
         <td><button id="backspace">⌫</button></td>
